cabal-version:      3.0
name:               diwaani
version:            0.1.0.0
synopsis:           naiveimplementation of writer monad
-- description:
homepage:           https://github.com/LitFill/diwaani.git
license:            BSD-3-Clause
license-file:       LICENSE
author:             LitFill
maintainer:         marrazzy54@gmail.com
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   src
    default-language: GHC2024
